# cp-score-imobiliaria

./: .gitignore  pyproject.toml  sql.yaml
notebooks/: 1_etl.ipynb  2_data_preparation.ipynb  3_optuna.ipynb  4_score-imob.ipynb  5_bins_segmentation.ipynb  6_econ_calculator.ipynb  analysis.ipynb  bins_segmentation.ipynb  calculadora.ipynb  data_preparation.ipynb  econ_calculator.ipynb  etl.ipynb  grid_search.ipynb  hyperopt.ipynb  optuna.ipynb  score-imob.ipynb
notebooks/outputs/: params.json  params_et.json  params_et_2.json
src/: data_preprocess.py  feature_importance.py  params.py  segmentation.py  train.py  utils.py
src/develop/: cross_validation.py  feature_importance.py  grid_search.py  hyperopt.py
src/develop/frame/: app.py  params_dev.py  utils.py
src/develop/frame/data/: params_et.json
src/develop/frame/models/: BinsSplitter.py  DataCustomizer.py  EconCalculator.py  ModelGenerator.py  Optimizer.py  ReportGenerator.py
src/develop/frame/reports/: teste.txt
