[tool.poetry]
name = "score-imobiliaria-model"
version = "0.1.0"
description = ""
authors = ["Raquel Camara <raquel.camara@loft.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
scikit-learn = "^1.2.0"
pyarrow = "8.0.0"
optuna = "^2.10.1"
lightgbm = "^3.3.5"
optbinning = "^0.17.3"
risk-suite = {path = "/Users/raquel.camara/Documents/CredPago/risk_suite/dist/risk_suite-0.3.0-py3-none-any.whl"}
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
